# stablerail-warmup

./: .gitignore  .vercelignore  PLAN.md  README.md  codama.json  package-lock.json  package.json  test_emit_pattern  vercel.json
.claude/: launch.json
anchor/: Anchor.toml  README.md
anchor/programs/orbital/: Cargo.toml
anchor/programs/orbital/src/: events.rs  lib.rs
anchor/programs/orbital/src/domain/: mod.rs
anchor/programs/orbital/src/domain/core/: mod.rs  pool.rs  swap.rs
anchor/programs/orbital/src/domain/liquidity/: mod.rs
anchor/programs/orbital/src/domain/policy/: mod.rs
anchor/programs/orbital/src/domain/settlement/: mod.rs
anchor/programs/orbital/src/errors/: mod.rs
anchor/programs/orbital/src/instructions/: add_liquidity.rs  close_pool.rs  close_tick.rs  create_policy.rs  create_tick.rs  execute_settlement.rs  execute_swap.rs  initialize_pool.rs  manage_allowlist.rs  manage_kyc_entry.rs  mod.rs  remove_liquidity.rs  tick_helpers.rs  update_policy.rs
anchor/programs/orbital/src/math/: fixed_point.rs  mod.rs  newton.rs  reserve_state.rs  sphere.rs  tick.rs  torus.rs
anchor/programs/orbital/src/state/: allowlist.rs  audit_entry.rs  kyc_entry.rs  mod.rs  policy.rs  pool.rs  position.rs  settlement.rs  tick.rs
anchor/programs/orbital/tests/: initialize_pool.rs  liquidity.rs  policy.rs  settlement.rs  swap.rs
anchor/programs/orbital/tests/common/: mod.rs
app/: globals.css  layout.tsx  page.tsx
docs/: DESIGN_SYSTEM.md  Orbital_DDD_Architecture.md  Orbital_Math_Reference.md  Orbital_Settlement_Protocol_PRD_v2.1.md  create-pitch-deck.js  (+1 more)
(+82 files in other folders)
